--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,17 @@
 			<artifactId>twilio</artifactId>
 			<version>8.30.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.vaadin.external.google</groupId>
+            <artifactId>android-json</artifactId>
+            <version>0.0.20131108.vaadin1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-core</artifactId>
+            <version>1.13</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
