--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup JDK11
-        uses: actions/setup-java@1
+        uses: actions/setup-java@v1
         with:
           java-version: 11
           server-id: github
@@ -34,7 +34,7 @@ jobs:
         run: mvn clean package -DskipTests
 
       - name: Setup Google Cloud CLI
-        uses: GoogleCloudPlatform/github-actions/setup-glcoud@2.285.0
+        uses: GoogleCloudPlatform/github-actions/setup-glcoud@0.1.3
         env:
           ACTIONS_ALLOW_UNSECURE_COMMAND: true
         with:
