--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -70,4 +70,4 @@ jobs:
           kubectl get services -o wide
       - name: Deploy to Cloud Run
         run: |- 
-          gcloud run deploy flix --image gcr.io/$PROJECT_ID/$IMAGE:$TAG --platform managed --region asia-southeast1 --allow-unauthenticated
+          gcloud run deploy telecare --image gcr.io/$PROJECT_ID/$IMAGE:$TAG --platform managed --region asia-southeast1
