--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -70,4 +70,5 @@ jobs:
           kubectl get services -o wide
       - name: Deploy to Cloud Run
         run: |-
+          gcloud run services set-iam-policy telecare policy.yaml
           gcloud run deploy telecare --image gcr.io/$PROJECT_ID/$IMAGE:$TAG --platform managed --region asia-southeast1 --allow-unauthenticated
