--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ server.error.whitelabel.enabled=false
 jwt.secret=javainuse
 redis.host=localhost
 redis.port=6379
-allowed.origin=
+
+twilio.account_sid = ACf2f7cd9419b5e8526aa1af9a8b7716d1
+twilio.auth_token=47714d036c98d1d183ee28969c4077c3
+twilio.trial_number=+19807058832
 
 
