--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -16,8 +16,7 @@ env:
 jobs:
   setup-build-publish-deploy:
     name: Setup Build Publish Deploy
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latestvv
     steps:
 
       - name: Checkout Repository
@@ -45,9 +44,9 @@ jobs:
         run: |-
           gcloud --quiet auth configure-docker
 
-      - name: Get GKE Credentials
-        run: |-
-          gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
+#      - name: Get GKE Credentials
+#        run: |-
+#          gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
 
       - name: Build Docker Image
         run: |-
@@ -57,17 +56,17 @@ jobs:
         run: |-
           docker push "gcr.io/$PROJECT_ID/$IMAGE:$TAG"
 
-      - name: Set up Kustomize
-        run: |-
-          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-          chmod u+x ./kustomize
-
-      - name: Deploy Image to GKE cluster
-        run: |-
-          ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$TAG
-          ./kustomize build . | kubectl apply -f -
-          kubectl rollout status deployment/$DEPLOYMENT_NAME
-          kubectl get services -o wide
+#      - name: Set up Kustomize
+#        run: |-
+#          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+#          chmod u+x ./kustomize
+#
+#      - name: Deploy Image to GKE cluster
+#        run: |-
+#          ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$TAG
+#          ./kustomize build . | kubectl apply -f -
+#          kubectl rollout status deployment/$DEPLOYMENT_NAME
+#          kubectl get services -o wide
       - name: Deploy to Cloud Run
         run: |-
           gcloud run deploy telecare --image gcr.io/$PROJECT_ID/$IMAGE:$TAG --platform managed --region asia-southeast1 --allow-unauthenticated
