--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,20 @@ twilio.account_sid = ACf2f7cd9419b5e8526aa1af9a8b7716d1
 twilio.auth_token=47714d036c98d1d183ee28969c4077c3
 twilio.trial_number=+19807058832
 
+vnpay.vnpPayUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.vnpReturnUrl=https://telecare-doxr4lwcja-as.a.run.app/api/v1/payment/returnPayment
+vnpay.vnpTmnCode=HEZES5XN
+vnpay.vnpHashSecret=JGAWVSUVYAQETSOFRBNLWUHDHZTUUVYU
+vnpay.vnpApiUrl=https://sandbox.vnpayment.vn/merchant_webapi/merchant.html
+vnpay.vnpIpnUrl=https://telecare-doxr4lwcja-as.a.run.app/api/v1/payment/returnIpn
+vnpay.vnpVersion=2.1.0
+vnpay.vnpCommand=pay
+vnpay.vnpOrderInfo=offer
+vnpay.orderType=270001
+vnpay.vnpCurrCode=VND
+vnpay.vnpBankCode=NCB
+
+
 
 
 
