--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-server.error.whitelabel.enabled=false
+
+#For no-change any data in db
+spring.jpa.hibernate.ddl-auto=update
+
 jwt.secret=javainuse
 redis.host=localhost
 redis.port=6379
@@ -25,6 +27,8 @@ vnpay.vnpOrderInfo=offer
 vnpay.orderType=270001
 vnpay.vnpCurrCode=VND
 vnpay.vnpBankCode=NCB
+
+
 
 
 
