--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #For no-change any data in db
 spring.jpa.hibernate.ddl-auto=update
+spring.aop.proxy-target-class=true
 
 jwt.secret=javainuse
 redis.host=localhost
