--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.aop.proxy-target-class=true
 
+app.firebase-configuration-file=serviceAccountKey.json
+
 jwt.secret=javainuse
 redis.host=localhost
 redis.port=6379
